--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "author": "mragulin",
   "scripts": {
     "build": "webpack",
-    "watch": "webpack --watch",
-    "start": "webpack-dev-server"
+    "watch": "webpack-dev-server --progress --colors --open",
+    "start": "npm run watch"
   },
   "license": "MIT",
   "dependencies": {
