1) add info to READEM.md 2) change dev-server config

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "mragulin",
   "scripts": {
     "build": "webpack",
-    "watch": "webpack-dev-server --progress --colors --open",
+    "watch": "webpack-dev-server --progress --colors",
     "start": "npm run watch"
   },
   "license": "MIT",
